@@ -1,6 +1,6 @@
 Name: globus-simple-ca
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_simple_ca-4.18.tar.gz
+Source: http://www.globus.org/ftppub/gt6/packages/globus_simple_ca-4.19.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
